--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,14 +1,14 @@
 # Application settings
-GIN_MODE=debug
-ENV=development
-PORT=3000
+GIN_MODE=
+ENV=
+PORT=
 
-# Database CONFIGURATION
-DB_URL=postgres://postgres:postgres@localhost:5432/postgres
+# Database configuration
+DB_URL=
 
-# SMTP configuration
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=mrdellforum1@gmail.com
-SMTP_PASS=vnmnfucmgzrssvce
-SMTP_FROM=noreply@trueforce.ai
+# SMTP Configuration
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASS=
+SMTP_FROM=
